// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadForm expect to render 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormGroup
    fieldId="file"
    isRequired={true}
    isValid={true}
    label="Inventory data file"
  >
    <Dropzone
      multiple={false}
      noClick={true}
      noKeyboard={true}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </FormGroup>
  <FormGroup
    fieldId="reportName"
    isRequired={true}
    isValid={true}
    label="Report name"
  >
    <TextInput
      aria-describedby="Report name"
      aria-label={null}
      className=""
      id="reportName"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="reportName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="reportDescription"
    isValid={true}
    label="Report description"
  >
    <TextInput
      aria-describedby="Report description"
      aria-label={null}
      className=""
      id="reportDescription"
      isDisabled={false}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      name="reportDescription"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="yearOverYearGrowthRatePercentage"
    isRequired={true}
    isValid={true}
    label="Year-over-year growth rate for new hypervisors"
  >
    <div
      className="pf-l-grid pf-m-all-3-col-on-md"
    >
      <InputGroup>
        <TextInput
          aria-describedby="Year-over-year growth rate for new hypervisors"
          aria-label={null}
          className="pf-u-text-align-right"
          id="yearOverYearGrowthRatePercentage"
          isDisabled={false}
          isReadOnly={false}
          isRequired={true}
          isValid={true}
          name="yearOverYearGrowthRatePercentage"
          onBlur={[MockFunction]}
          onChange={[Function]}
          type="number"
        />
        <InputGroupText>
          %
        </InputGroupText>
      </InputGroup>
    </div>
  </FormGroup>
  <Stack
    className="pf-sm-gutter"
    gutter="sm"
  >
    <StackItem
      isFilled={false}
    >
      <label
        className="pf-c-form__label"
      >
        <span
          className="pf-c-form__label-text"
        >
          Percentage of hypervisors migrated each year
        </span>
      </label>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear1"
        isValid={true}
        label="Year1"
      >
        <div
          className="pf-l-grid pf-m-all-3-col-on-md"
        >
          <InputGroup>
            <TextInput
              aria-label="Percentage of hypervisors migrated on year 1"
              className="pf-u-text-align-right"
              id="percentageOfHypervisorsMigratedOnYear1"
              isDisabled={false}
              isReadOnly={false}
              isRequired={true}
              isValid={true}
              name="percentageOfHypervisorsMigratedOnYear1"
              onBlur={[MockFunction]}
              onChange={[Function]}
              type="number"
            />
            <InputGroupText>
              %
            </InputGroupText>
          </InputGroup>
        </div>
      </FormGroup>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear2"
        isValid={true}
        label="Year 2"
      >
        <div
          className="pf-l-grid pf-m-all-3-col-on-md"
        >
          <InputGroup>
            <TextInput
              aria-label="Percentage of hypervisors migrated on year 2"
              className="pf-u-text-align-right"
              id="percentageOfHypervisorsMigratedOnYear2"
              isDisabled={false}
              isReadOnly={false}
              isRequired={true}
              isValid={true}
              name="percentageOfHypervisorsMigratedOnYear2"
              onBlur={[MockFunction]}
              onChange={[Function]}
              type="number"
            />
            <InputGroupText>
              %
            </InputGroupText>
          </InputGroup>
        </div>
      </FormGroup>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear3"
        isValid={true}
        label="Year 3"
      >
        <div
          className="pf-l-grid pf-m-all-3-col-on-md"
        >
          <InputGroup>
            <TextInput
              aria-label="Percentage of hypervisors migrated on year 3"
              className="pf-u-text-align-right"
              id="percentageOfHypervisorsMigratedOnYear3"
              isDisabled={false}
              isReadOnly={false}
              isRequired={true}
              isValid={true}
              name="percentageOfHypervisorsMigratedOnYear3"
              onBlur={[MockFunction]}
              onChange={[Function]}
              type="number"
            />
            <InputGroupText>
              %
            </InputGroupText>
          </InputGroup>
        </div>
      </FormGroup>
    </StackItem>
  </Stack>
  <ActionGroup>
    <Component
      disabled={false}
      isDisabled={false}
      type="submit"
      variant="primary"
    >
      Create report
    </Component>
    <Component
      onClick={[MockFunction]}
      type="button"
      variant="secondary"
    >
      Cancel
    </Component>
  </ActionGroup>
</Form>
`;

exports[`UploadForm expect to render errors 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormGroup
    fieldId="file"
    helperTextInvalid="Field value invalid"
    isRequired={true}
    isValid={false}
    label="Inventory data file"
  >
    <Dropzone
      multiple={false}
      noClick={true}
      noKeyboard={true}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </FormGroup>
  <FormGroup
    fieldId="reportName"
    helperTextInvalid="Field value invalid"
    isRequired={true}
    isValid={false}
    label="Report name"
  >
    <TextInput
      aria-describedby="Report name"
      aria-label={null}
      className=""
      id="reportName"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={false}
      name="reportName"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="reportDescription"
    helperTextInvalid="Field value invalid"
    isValid={false}
    label="Report description"
  >
    <TextInput
      aria-describedby="Report description"
      aria-label={null}
      className=""
      id="reportDescription"
      isDisabled={false}
      isReadOnly={false}
      isRequired={false}
      isValid={false}
      name="reportDescription"
      onBlur={[MockFunction]}
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    fieldId="yearOverYearGrowthRatePercentage"
    helperTextInvalid="Field value invalid"
    isRequired={true}
    isValid={false}
    label="Year-over-year growth rate for new hypervisors"
  >
    <div
      className="pf-l-grid pf-m-all-3-col-on-md"
    >
      <InputGroup>
        <TextInput
          aria-describedby="Year-over-year growth rate for new hypervisors"
          aria-label={null}
          className="pf-u-text-align-right"
          id="yearOverYearGrowthRatePercentage"
          isDisabled={false}
          isReadOnly={false}
          isRequired={true}
          isValid={false}
          name="yearOverYearGrowthRatePercentage"
          onBlur={[MockFunction]}
          onChange={[Function]}
          type="number"
        />
        <InputGroupText>
          %
        </InputGroupText>
      </InputGroup>
    </div>
  </FormGroup>
  <Stack
    className="pf-sm-gutter"
    gutter="sm"
  >
    <StackItem
      isFilled={false}
    >
      <label
        className="pf-c-form__label"
      >
        <span
          className="pf-c-form__label-text"
        >
          Percentage of hypervisors migrated each year
        </span>
      </label>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear1"
        helperTextInvalid="Field value invalid"
        isValid={false}
        label="Year1"
      >
        <div
          className="pf-l-grid pf-m-all-3-col-on-md"
        >
          <InputGroup>
            <TextInput
              aria-label="Percentage of hypervisors migrated on year 1"
              className="pf-u-text-align-right"
              id="percentageOfHypervisorsMigratedOnYear1"
              isDisabled={false}
              isReadOnly={false}
              isRequired={true}
              isValid={false}
              name="percentageOfHypervisorsMigratedOnYear1"
              onBlur={[MockFunction]}
              onChange={[Function]}
              type="number"
            />
            <InputGroupText>
              %
            </InputGroupText>
          </InputGroup>
        </div>
      </FormGroup>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear2"
        helperTextInvalid="Field value invalid"
        isValid={false}
        label="Year 2"
      >
        <div
          className="pf-l-grid pf-m-all-3-col-on-md"
        >
          <InputGroup>
            <TextInput
              aria-label="Percentage of hypervisors migrated on year 2"
              className="pf-u-text-align-right"
              id="percentageOfHypervisorsMigratedOnYear2"
              isDisabled={false}
              isReadOnly={false}
              isRequired={true}
              isValid={false}
              name="percentageOfHypervisorsMigratedOnYear2"
              onBlur={[MockFunction]}
              onChange={[Function]}
              type="number"
            />
            <InputGroupText>
              %
            </InputGroupText>
          </InputGroup>
        </div>
      </FormGroup>
    </StackItem>
    <StackItem
      className="upload-form-subform-margin-left"
      isFilled={false}
    >
      <FormGroup
        fieldId="percentageOfHypervisorsMigratedOnYear3"
        helperTextInvalid="Field value invalid"
        isValid={false}
        label="Year 3"
      >
        <div
          className="pf-l-grid pf-m-all-3-col-on-md"
        >
          <InputGroup>
            <TextInput
              aria-label="Percentage of hypervisors migrated on year 3"
              className="pf-u-text-align-right"
              id="percentageOfHypervisorsMigratedOnYear3"
              isDisabled={false}
              isReadOnly={false}
              isRequired={true}
              isValid={true}
              name="percentageOfHypervisorsMigratedOnYear3"
              onBlur={[MockFunction]}
              onChange={[Function]}
              type="number"
            />
            <InputGroupText>
              %
            </InputGroupText>
          </InputGroup>
        </div>
      </FormGroup>
    </StackItem>
  </Stack>
  <ActionGroup>
    <Component
      disabled={false}
      isDisabled={false}
      type="submit"
      variant="primary"
    >
      Create report
    </Component>
    <Component
      onClick={[MockFunction]}
      type="button"
      variant="secondary"
    >
      Cancel
    </Component>
  </ActionGroup>
</Form>
`;
